vengi (0.0.6.0-1) UNRELEASED; urgency=low

 -- Martin Gerhardy <martin.gerhardy@gmail.com>  Sun, 26 Jul 2020 16:17:11 +0200

vengi (0.0.5.0-1) unstable; urgency=low

  * Client:
  * Fixed movement

  * Server:
  * Fixed visibility check
  * Fixed segfault while removing npcs

  * VoxEdit:
  * Started to add scene mode edit support (move volumes)

  * VoxConvert:
  * Support different palette files (cvar `palette`)
  * Support writing outside the registered application paths
  * Allow to overwrite existing files

  * General:
  * Switched to qb as default volume format
  * Improved scene graph support for Magicavoxel vox files
  * Fixed invisible voxels for qb and qbt (Qubicle) volume format
  * Support automatic loading different volume formats for assets
  * Support Command&Conquer vxl files
  * Support Ace of Spades map files (vxl)
  * Support Qubicle exchange format (qef)
  * Perform mesh extraction in dedicated threads for simple volume rendering
  * Improved gizmo rendering and translation support
  * Fixed memory leaks on shutdown
  * Improved profiling support via tracy

 -- Martin Gerhardy <martin.gerhardy@gmail.com>  Sun, 26 Jul 2020 10:32:10 +0200

vengi (0.0.4.0-1) unstable; urgency=low

  * General:
  * Added support for writing binvox files
  * Added support for reading kvx (Build-Engine) and kv6 (SLAB6) voxel volumes
  * Performed some AFL hardening on voxel format code
  * Don't execute keybindings if the console is active
  * Added basic shader storage buffer support
  * Reduced voxel vertex size from 16 to 8 bytes
  * Apply checkerboard pattern to water surface
  * Improved tracy profiling support
  * A few highdpi fixes

  * Server:
  * Allow to specify the database port
  * Fixed loading database chunks

  * VoxEdit:
  * Added `scale` console command to produce LODs

  * VoxConvert:
  * Added ability to merge all layers into one

 -- Martin Gerhardy <martin.gerhardy@gmail.com>  Sun, 7 Jun 2020 10:31:09 +0200
