@@ -1,5 +1,8 @@
 vengi (0.0.6.0-1) UNRELEASED; urgency=low
 
+  * VoxEdit:
+  * Fixed loading palette lua script with material definitions
+
  -- Martin Gerhardy <martin.gerhardy@gmail.com>  Sun, 26 Jul 2020 16:17:11 +0200
 
 vengi (0.0.5.0-1) unstable; urgency=low
